<resources>
    <string name="app_name">Via Cep</string>
    <string name="cep">Cep</string>
    <string name="search_cep">Buscar Cep</string>
    <string name="location">Logradouro</string>
    <string name="neighborhood">Bairro</string>
    <string name="city">Cidade</string>
    <string name="uf">Estado</string>

    <!-- Event Message -->
    <string name="cep_empty">"Preencha o cep"</string>
    <string name="loading_info">"Carregando informações"</string>
    <string name="loading_finish">"Sucesso ao carregar informações"</string>
    <string name="loading_finish_error">"Não encontrado informações"</string>
    <string name="error_find_address">"Erro ao carregar informações"</string>
</resources>