<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                app:boxStrokeColor="@color/teal_700"
                app:hintTextColor="@color/teal_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textCursorDrawable="@drawable/cursor_edittext" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_search_cep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/teal_700"
                android:padding="15dp"
                android:text="@string/search_cep"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/neighborhood"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_edittext" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/uf"
                android:inputType="text"
                android:maxLength="2"
                android:textCursorDrawable="@drawable/cursor_edittext" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>